# ZuraaaBot

./: .eslintrc.js  .eslintrc.json  .gitignore  Cargo.toml  README.md  bot.js  config.example.json  config.json.example  emojis.json  exemple.env  index.js  main.py  ormconfig.example.json  package-lock.json  package.json  requirements.txt  tsconfig.json
.github/: dependabot.yml
.github/workflows/: rust.yml  zuraaa.yml
cogs/: join.py
commands/: ban.js  bot.js  kick.js  mute.js  ping.js  test.js  unmute.js  userinfo.js
events/: guildBanRemove.js  handler.js  memberJoin.js  memberLeave.js  message.js  messageReactionAdd.js  ready.js
src/: config.example.json  constants.rs  events.rs  helpers.rs  index.ts  main.rs  zuraaa-bot.ts
src/api/: api_formats.rs  get_types.rs  mod.rs
src/commands/: botlist.rs  help.rs  mod.rs  ping.ts  utils.rs
src/commands/botlist/: bot.ts  removebot.ts  resetvotes.ts  test.ts  userinfo.ts
src/commands/forms/: form.ts  replyForm.ts
src/commands/moderacao/: ban.ts  kick.ts  mute.ts  unmute.ts
src/commands/staff/: removebot.ts
src/commands/utils/: help.ts  help.ts.disable  ping.ts  test.ts
src/commands/vulcan/: acess.ts  download.ts
src/configs/: api_config.rs  bot_config.rs  mod.rs
src/database/entity/: bots.ts  users.ts
src/events/bot/: ready.ts
src/messages/: get-user.ts  index.ts  send-remove.ts
src/modules/api/: zuraaaapi.ts
src/modules/database/: LocalDatabase.ts  types.ts
src/modules/handler/: command.ts  decorators.ts  handler.ts  icommand-data.ts  (+2 more)
utils/: modlog.js  tags.js
utils/database/: botlist.js
(+19 files in other folders)
