[package]
name = "zuraaa-bot"
version = "0.2.0"
authors = ["Takasakiii <lucasmc2709@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "^0.10.4"
dotenv = "^0.15.0"
reqwest = "^0.11.2"
serde = "^1.0.125"

[dependencies.tokio]
version = "^1.4.0"
features = ["macros", "rt-multi-thread"]